<resources>
    <string name="app_name">SmartRestoAdminApp</string>
    <string name="restaurantsTitle">RESTAURANTS</string>
    <string name="title_activity_information">InformationActivity</string>
    <!--Strings-->
    <string name="applicationTitle">SMART RESTO APP</string>
    <string name="textViewEmail">Email</string>
    <string name="textViewEmailAddress">Your email address</string>
    <string name="textViewPassword">Password</string>
    <string name="buttonLoginText">LOG IN</string>
    <string name="textForgotPassword">Forgot your password?</string>
    <string name="textResetPassword">RESET PASSWORD</string>
    <string name="textGoBack">GO BACK</string>
    <string name="open_drawer">Navigation Drawer is open</string>
    <string name="close_drawer">Navigation Drawer is close</string>

    <string name="text_address">Address</string>
    <string name="text_phoneNumber">Phone Number</string>

    <!--Edit Restaurant-->
    <string name="title_edit_layout">Edit Information</string>
    <string name="text_edit_name">Restaurant Name</string>
    <string name="text_edit_address">Address</string>
    <string name="text_edit_phone">Phone Number</string>
    <string name="text_edit_image">Image</string>
    <string name="text_edit_bgColor">Color</string>
    <string name="text_edit_location">Map Location</string>


    <!--Tabs Titles-->
    <string name="tab_Information">Information</string>
    <string name="tab_Reservations">Reservations</string>
    <string name="tab_Promotions">Promotions</string>
    <!--Activities and fragments Titles-->
    <string name="title_RestaurantList">Restaurants</string>
    <string name="title_Notifications">Notifications</string>
    <string name="title_activity_restaurant_main">RestaurantMainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
