<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/colorPrimaryDark"
        tools:context=".LoginActivity">
    <android.support.constraint.ConstraintLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/applicationTitle"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginTop="150dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/textViewEmailAddress"
                android:textSize="15sp"
                android:background="@drawable/edittext_rounded"
                android:textColorHint="@color/textColor"
                android:textColor="@color/textColor"
                tools:ignore="Autofill"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/title"/>
        <Button
                android:id="@+id/buttonResetPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/textResetPassword"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:background="@drawable/button_ripple_bg"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText"/>
        <Button
                android:id="@+id/buttonGoBack"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/textGoBack"
                android:textColor="@color/textColor"
                android:textSize="15sp"
                android:background="@drawable/button_ripple"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>