<?xml version="1.0" encoding="utf-8"?>


<ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layout_Background">
    <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".EditRestaurantActivity">

        <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="20dp"
                app:counterEnabled="true"
                app:counterMaxLength="50">

            <EditText
                    android:id="@+id/editText_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_edit_name"
                    android:maxLines="1"
                    android:maxLength="50"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="18dp"
                app:counterEnabled="true"
                app:counterMaxLength="100">

            <EditText
                    android:id="@+id/editText_Address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_edit_address"
                    android:maxLength="100"
                    android:maxLines="4"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="18dp"
                app:counterEnabled="true"
                app:counterMaxLength="15">

            <EditText
                    android:id="@+id/editText_Phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_edit_phone"
                    android:maxLength="15"
                    android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_edit_image"
                android:textSize="15sp"
                android:textColor="@color/colorAccentDark"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"/>

        <ImageView
                android:id="@+id/imageView_edit_image"
                android:layout_width="220dp"
                android:layout_gravity="center"
                android:layout_height="120dp"/>

        <Button
                android:id="@+id/button_Information"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="Select"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/button_ripple_bg"/>

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Show advanced options"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>


</ScrollView>