<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".RestaurantMainActivity">
    <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

    <ImageView
            android:id="@+id/imageView_RestaurantLogo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:tabSelectedTextColor="@color/colorAccent"
            app:tabTextColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/imageView_RestaurantLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    >

        <android.support.design.widget.TabItem
                android:id="@+id/tab_Information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_Information"/>

        <android.support.design.widget.TabItem
                android:id="@+id/tab_Reservations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_Reservations"/>

        <android.support.design.widget.TabItem
                android:id="@+id/tab_Promotions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_Promotions"/>


    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_dialog_email"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>